--- a/adsense.html
+++ b/adsense.html
@@ -2,6 +2,7 @@
 <html>
   <head><meta charset="UTF-8"><title>AdSense Embed</title></head>
   <body>
+     <h2>Advertisement</h2>
     <!-- Client's AdSense Code -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8880621705390497"
      crossorigin="anonymous"></script>
